--- a/ecommerce-eureka-server.yml
+++ b/ecommerce-eureka-server.yml
@@ -1,22 +1,22 @@
-#server:
-#  port: 4001
-#
-#eureka:
-#  instance:
-#    hostname: localhost
-#  client:
-#    registerWithEureka: true
-#    fetchRegistry: false
-#    serviceUrl:
-#      defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
-#  server:
-#    wait-time-in-ms-when-sync-empty: 3000
+server:
+  port: 4001
 
 eureka:
+  instance:
+    hostname: localhost
   client:
     registerWithEureka: true
     fetchRegistry: false
     serviceUrl:
-      defaultZone: https://ecommerce-eureka-server.herokuapp.com/eureka/
+      defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
   server:
     wait-time-in-ms-when-sync-empty: 3000
+
+#eureka:
+#  client:
+#    registerWithEureka: true
+#    fetchRegistry: false
+#    serviceUrl:
+#      defaultZone: https://ecommerce-eureka-server.herokuapp.com/eureka/
+#  server:
+#    wait-time-in-ms-when-sync-empty: 3000
